-fix: adjusted Header styling
Increased the top and bottom margin of the main layout to avoid any overlap.

--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -1,5 +1,6 @@
 .main {
-    margin: 3rem auto;
+    padding: 1rem;
+    margin: 5rem auto;
     width: 90%;
     max-width: 40rem;
   }
